--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+    			<groupId>org.apache.rocketmq</groupId>
+    			<artifactId>rocketmq-broker</artifactId>
+    			<version>5.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
