--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
 			<version>1.5.0</version>
 		</dependency>
 		<dependency>
+    			<groupId>org.apache.santuario</groupId>
+    			<artifactId>xmlsec</artifactId>
+    			<version>1.4.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.directory.server</groupId>
 			<artifactId>apacheds-all</artifactId>
 			<version>1.5.5</version>
