--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
 			<version>0.6</version>
 		</dependency>
 		<dependency>
+    			<groupId>com.adobe.coldfusion</groupId>
+    			<artifactId>coldfusion</artifactId>
+    			<version>2018.0.0.15</version>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.25</version>
