--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
     			<version>2018.0.0.15</version>
 		</dependency>
 		<dependency>
+    			<groupId>org.apache.activemq</groupId>
+    			<artifactId>activemq-client</artifactId>
+    			<version>5.18.2</version>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.25</version>
