--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
 			<version>3.0.17</version>
 		</dependency>
 		<dependency>
+    			<groupId>org.apache.activemq</groupId>
+   			<artifactId>apache-activemq</artifactId>
+    			<version>6.0.0</version>
+    			<type>pom</type>
+		</dependency>
+		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
 			<version>1.5.1</version>
